created posts section

--- a/_includes/l_sidepanel.html
+++ b/_includes/l_sidepanel.html
@@ -32,12 +32,12 @@
         </li>
       </a>
     </ul>
-    <!-- <div class="scaff-container">
+    <div class="scaff-container">
       <h3 class="scaff-button">Tüm Girdiler</h3>
       <div class="scaff-content">
         {%-include menu_item.html collection=site.data.menu.entries-%}
       </div>
-    </div> -->
+    </div>
   </nav>
   <div class="caret-cont-sidepanel" onclick="toggleSidePanel()">
     <i class="fa-solid fa-caret-left fa-lg" style="color: rgb(198, 208, 245);"></i>
