--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,19 @@ layout: default
 <header>
   <h1>Anasayfa</h1>
 </header>
+
+<!-- <div class="post-container">
+  <div class="post-wrapper">
+    {% assign posts = site.posts %}
+    {% for post in posts limit:5 %}
+      <div class="post-list-box">
+        <li class="post"><a href="{{site.baseurl}}{{page.url}}">{{post.title}}</a></li>
+      </div>
+   {% endfor %}
+  </div>
+</div> -->
+
+
 <div class="contentbox__main">
   <a href="{{ site.baseurl }}wiki/tarih.html">
     <div class="contentbox-container">
