--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <h1>Külliyat</h1>
         {% assign posts = site.posts %}
         {% for post in posts limit:4 %}
-        <a href="{{post.url}}">
+        <a href="{{site.baseurl}}{{post.url}}">
           <div class="post-list-box">
             <li class="post">{{post.title}}</li>
           </div>
