--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
-    <footer class="footer-container">
-        <ul>
-          <li><a href="https://www.instagram.com/enginbyram/"><i class="fa-brands fa-instagram fa-xl" style="color: rgb(49,50,68);"></i></a></li>
-          <li><a href="https://www.github.com/enginbyram/"><i class="fa-brands fa-github fa-xl" style="color: #313244;"></i></a></li>
+<footer class="footer_container">
+    <div class="footer_items">
+        <span class="footer_header">ORBIS NATURA</span>
+        <span class="footer_desc">Fantastik evren Orbis'in ve kısa hikayelerimin veritabanı. Ayrıca minik de bir blog.</span>    
+        <ul class="footer_links">
+            <a href="https://github.com/enginbyram" class="footer_github"><i class="fa-brands fa-github fa-2xl" style="color: rgba(#fff,.85);"></i></a>
+            <a href="https://instagram.com/enginbyram" class="footer_instagram"><i class="fa-brands fa-instagram fa-2xl" style="color: rgba(#fff,.85);"></i></a>
         </ul>
-        <div class="footer-header">
-          <h1>Orbis Natura</h1>
-          <p>Orbis evreni içerisinde geçen kısa hikayeler ve evren hakkındaki bilgileri içerir.</p>
-          <p>Bütün hakları saklıdır.</p>
-        </div>
-      </footer>
+
+    </div>
+</footer>
