created simple yet inefficent cat system

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,15 +19,15 @@
                 <a href="{{ site.baseurl }}/"><h1 id="sitemap_source_header">ORBIS</h1></a>
 
                     <ul>
-                        <a href=""><h2 id="cat_header">10.1 - Kültür ve toplum</h2></a>
-                                <a href=""><li class="cat_links">10.2 - Din ve inanç</li></a>
-                                <a href=""><li class="cat_links">10.3 - Sanat</li></a>
-                                <a href=""><li class="cat_links">10.4 - Dil</li></a>
-                                <a href=""><li class="cat_links">10.5 - Sınıflar ve mertebeler</li></a>
+                        <a href="{{site.baseurl}}/category/toplum"><h2 id="cat_header">10.1 - Kültür ve toplum</h2></a>
+                                <a href="{{site.baseurl}}/category/toplum/din"><li class="cat_links">10.2 - Din ve inanç</li></a>
+                                <a href="{{site.baseurl}}/category/toplum/sanat"><li class="cat_links">10.3 - Sanat</li></a>
+                                <a href="{{site.baseurl}}/category/toplum/dil"><li class="cat_links">10.4 - Dil</li></a>
+                                <a href="{{site.baseurl}}/category/toplum/mertebeler"><li class="cat_links">10.5 - Sınıflar ve mertebeler</li></a>
                                 <ul>
-                                    <a href=""><h2 id="cat_header">10.6 - Etnik gruplar</h2></a>
+                                    <a href="{{site.baseurl}}/category/toplum/irklar"><h2 id="cat_header">10.6 - Etnik gruplar</h2></a>
                                     <a href=""><li class="cat_links">10.6.1 - Bodunlar</li></a>
-                                    <a href=""><li class="cat_links">10.6.2 - İnsanlar</li></a>
+                                    <a href="{{site.baseurl}}/toplum/irklar/insan"><li class="cat_links">10.6.2 - İnsanlar</li></a>
                                     <a href=""><li class="cat_links">10.6.3 - Arysuslar</li></a>
                                     <a href=""><li class="cat_links">10.6.4 - Nemeler</li></a>
                                 </ul>
