--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,3 +16,46 @@ layout: default
 <div class="post_wrapper">
   {{ content }}
 </div>
+
+<h1>Bu kategorideki diğer yazılar</h1>
+<hr>
+<div class="blogpost_inner_container">
+  {% for category in page.categories[-1] %}
+    <div class="blogpost_header">
+        <h2>{{ category }}</h2>
+        
+        <div class="blogpost_container">
+          {% for post in site.categories[category] limit:2 %}
+              <div class="article_card">
+                  <div class="card_info">
+                      <div class="info_topinfos">
+                          <div class="info__date">{{ post.date | date: "%A, %-d %b %Y" }}</div>
+                          <a href="{{ site.baseurl }}{{post.url}}" class="cardopen_button">
+                              <i class="fa-sharp fa-solid fa-up-right-and-down-left-from-center fa-xs" style="color: #131313;"></i>                        </a>
+                      </div>
+                      <div class="info__title">{{ post.title }}</div>
+                      <div class="info__desc">{{ post.desc }}</div>
+                  </div>
+                  <div class="card_categories_section">
+                      <ul>
+                          {% for cat in post.categories %}
+                          <li id="{% cycle 'red_cat', 'green_cat', 'blue_cat' %}" class="category_pills">{{ cat }}</li>
+                          {% endfor %}
+                          <!-- <li id="red_cat" class="category_pills">Fikir</li>
+                          <li id="green_cat" class="category_pills" >Büyü</li>
+                          <li id="blue_cat" class="category_pills">Tarih</li> -->
+                      </ul>
+                  </div>
+              </div>
+  
+          {% endfor %}
+      
+      </div>
+
+    </div>
+  {% endfor %}
+</div>
+
+
+
+
