created banner system

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {{ content }}
+
 <!-- Blog posts are here -->
-<div class="blogposts_wrapper">
-    {% include blogposts.html %}
-</div>
+{% include featured_article.html %}
+{% include blogposts.html %}
