--- a/_includes/featured_article.html
+++ b/_includes/featured_article.html
@@ -1,15 +1,16 @@
 <div class="blogposts_wrapper">
     <div class="blogpost_inner_container">
         <div class="blogpost_header">
-            <h1>Yeni makaleler</h1>
+            <h1>Öne çıkan makaleler</h1>
         </div>
         
-        <div class="blogpost_container">
-            {% for post in site.posts %}
+        <div id="featured" class="blogpost_container">
+            {% for post in site.tags.Featured limit:5 %}
                 <a href="{{site.baseurl}}{{post.url}}">
     
                     <div class="article_card">
                         <div class="card_info">
+                            <img class="banner_wrapper" src=".{{post.banner | default: '/assets/img/placeholder_bn.png'}}" alt="">
                             <div class="info__date">{{ post.date | date: "%A, %-d %b %Y" }}</div>
                             <div class="info__title">{{ post.title }}</div>
                             <div class="info__desc">{{ post.desc }}</div>
@@ -30,8 +31,4 @@
         </div>
     </div>
 </div>
-
-
-
-
 
