--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -206,6 +206,8 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
 
 
 .mainport_container {
+  background-color: #f8f9fa;
+
   line-height: 1.5;
   font-size: 18px;
   letter-spacing: -.3px;
@@ -269,10 +271,29 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
 .contentbox {
   margin: 50px auto;
   padding:0 50px;
+
+  p {
+    margin:0 0 20px 0;
+    font-size: 18px;
+    letter-spacing: 0;
+    letter-spacing: -.1px;
+  }
+
+  h1 {
+    text-align: center;
+    border-bottom:1px solid $black5;
+    border-top:1px solid $black5;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+  }
 }
 
 .post_wrapper {
   width: 700px;
+  margin: 0 auto;
+  padding-bottom:100px;
+  border-bottom: 1px solid black;
+  margin-bottom:25px;
   
   a {
     text-decoration: none;
@@ -472,10 +493,22 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
 
 // Post CSS //
 
+.post_banner__centering {
+  display:flex;
+  justify-content: center;
+
+}
+.post_banner {
+  object-fit: fit;
+  padding:10px 0;
+  max-width: 800px;
+}
+
 .post_front-matter {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 100px;
 
   .post__date {
     font-size: 13px;
@@ -489,86 +522,81 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
 .blogposts_wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 1000px;
+  a {
+    text-decoration: none;
+    color: $black1;
+  }
 }
 
-.blogpost_header h2 {
-  font-size: 20px;
-  font-weight: 600;
-  padding:50px 0 0 50px;
+.blogpost_container#featured {
+
+  a:first-child {
+    width:600px;
+  }
+  a:nth-child(2) {
+    width:400px;
+  }
+
 }
 
 .blogpost_container {
   display: flex;
   flex-wrap: wrap;
-  
-  .article_card {
-    margin: 15px 5px;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border:1px solid rgba($white2, 0);
-    transition: border .2s ease, background-color .2s ease;
-    border:1px solid rgba($white3, .45);
+  width: 1100px;
 
-    padding: 0 10px;
-
-    .card_info {
-
-      .info_topinfos {
-        display: flex;
-        justify-content: space-between;
-        align-items:flex-start;
-
-        .cardopen_button {
-          padding: 5px 12px;
-          border-bottom: 1px solid $white3;
-          border-left: 1px solid $white3;
-        }
-
-        .info__date {
-          font-size: 11.5px;
-          font-weight: 600;
-          color: $purple;
-          padding: 20px 0 0 0;
-        }
-      }
-
-      .info__title {
-        font-size: 16.6px;
-        font-weight: 600;
-        color: $black1;
-        margin:10px 10px 20px 0;
-      }
-
-      .info__desc {
-        padding-bottom:13px;
-        font-size:13.5px;
-        letter-spacing: -.4px;
-        color: $black3;
-      }
-    }
+  a {
+    width:333px;
+    padding:15px;
+    transition: background-color .3s ease;
   }
-  .article_card:hover {
-    background-color: rgba($white2, .22);
-    border:1px solid rgba($white2, 1);
+
+  a:hover {
+    background-color: $white1;
   }
 }
-.card_categories_section ul {
-  width: max-content;
-  padding: 0;
+
+.card_info {
   display: flex;
-  cursor: pointer;
-  
-  li {
-    font-size: 10.5px;
-    padding: 0px 7px;
-    list-style: none;
-    border-radius: 10px;
+  flex-direction: column;
 }
 
+.info_topinfos {
+  display: flex;
+  justify-content: space-between;
 }
+
+.info__title {
+  font-weight: 600;
+}
+
+.info__desc {
+  color: $black3;
+  font-size:14px;
+}
+.info__date {
+  font-size:13px;
+  color: $purple;
+}
+
+.banner_wrapper {
+  object-fit: fit;
+  padding:10px 0;
+}
+
+.card_categories_section ul {
+    width: max-content;
+    padding: 0;
+    display: flex;
+    cursor: pointer;
+    
+    li {
+      font-size: 10.5px;
+      padding: 0px 7px;
+      list-style: none;
+      border-radius: 10px;
+  }
+}
+
 #red_cat {
   background-color: $redbg;
   color: $red;
@@ -586,6 +614,9 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
   border-radius:10px;
   color: $blue;
 }
+
+
+
 
 // Footer section //
 
@@ -634,5 +665,5 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
       color:$black2;
     }
   }
-
 }
+
