--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,6 +1,9 @@
 <div class="topbar_container">
     <nav class="topbar__nav">
         <div class="topbar__nav_name"><a href="https://github.com/enginbyram">{{ site.author }}</a></div>
+        <div class="searchbar">
+            {% include search-lunr.html %}
+        </div>
         <div class="topbar__nav_section">
             <ul>
             <a href="{{site.baseurl}}/"><li class="topbar__nav_section_list orbis">Orbıs</li></a>
