--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -161,6 +161,7 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
 .topbar__nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   width: 100%;
   padding-top: 36px;
@@ -667,3 +668,39 @@ a[href="https://enginbyram.github.io/orbis-natura/"] .table-of-content {
   }
 }
 
+// Searchbar
+
+input#lunrsearch {
+  width:30rem ;
+  height: 2rem;
+  font-size: 14px;
+}
+
+#lunrsearchresults {
+  padding-top:.2rem;
+  position: absolute;
+  background-color: $white1;
+  width: 28.3rem;
+
+  p {
+    margin-bottom: 10px;
+    font-weight: 600;
+  }
+}
+
+li.lunrsearchresult {
+  margin-bottom: 10px;
+
+  span.url {
+    display: none;
+  }
+
+  span.body {
+    font-size: 13px;
+  }
+}
+
+.lunrsearchresult .title {
+  color: $black1;
+  font-weight: 600;
+}
