created the category pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,92 +26,81 @@
                                 <a href="{{site.baseurl}}/category/toplum/mertebeler"><li class="cat_links">10.5 - Sınıflar ve mertebeler</li></a>
                                 <ul>
                                     <a href="{{site.baseurl}}/category/toplum/irklar"><h2 id="cat_header">10.6 - Etnik gruplar</h2></a>
-                                    <a href=""><li class="cat_links">10.6.1 - Bodunlar</li></a>
+                                    <a href="{{site.baseurl}}/toplum/irklar/cuce"><li class="cat_links">10.6.1 - Cüceler</li></a>
                                     <a href="{{site.baseurl}}/toplum/irklar/insan"><li class="cat_links">10.6.2 - İnsanlar</li></a>
-                                    <a href=""><li class="cat_links">10.6.3 - Arysuslar</li></a>
-                                    <a href=""><li class="cat_links">10.6.4 - Nemeler</li></a>
+                                    <a href="{{site.baseurl}}/toplum/irklar/arysus"><li class="cat_links">10.6.3 - Arysuslar</li></a>
+                                    <a href="{{site.baseurl}}/toplum/irklar/neme"><li class="cat_links">10.6.4 - Nemeler</li></a>
                                 </ul>
                     </ul>
                     <ul>
-                        <a href=""><h2 id="cat_header">20 - Organizasyonlar</h2></a>
-                                <a href=""><li class="cat_links">20.1 - Loncalar</li></a>
-                                <a href=""><li class="cat_links">20.2 - Ülkeler</li></a>
-                                <a href=""><li class="cat_links">20.3 - Dükkanlar</li></a>
-                                <a href=""><li class="cat_links">20.4 - Maceracı grupları</li></a>
-                                <a href=""><li class="cat_links">20.5 - Hanedanlıklar ve prestijli aileler</li></a>
+                        <a href="{{site.baseurl}}/category/organizasyonlar"><h2 id="cat_header">20 - Organizasyonlar</h2></a>
+                                <a href="{{site.baseurl}}/category/organizasyonlar/loncalar"><li class="cat_links">20.1 - Loncalar</li></a>
+                                <a href="{{site.baseurl}}/category/organizasyonlar/ulkeler"><li class="cat_links">20.2 - Ülkeler</li></a>
+                                <a href="{{site.baseurl}}/category/organizasyonlar/dukkanlar"><li class="cat_links">20.3 - Dükkanlar</li></a>
+                                <a href="{{site.baseurl}}/category/organizasyonlar/partiler"><li class="cat_links">20.4 - Maceracı grupları</li></a>
+                                <a href="{{site.baseurl}}/category/organizasyonlar/hanedanliklar"><li class="cat_links">20.5 - Hanedanlıklar ve prestijli aileler</li></a>
                     </ul>
                     <ul>
-                        <a href=""><h2 id="cat_header">30 - Coğrafya</h2></a>
+                        <a href="{{site.baseurl}}/category/cografya"><h2 id="cat_header">30 - Coğrafya</h2></a>
                         
                             <ul>
-                                <a href=""><h2 id="cat_header">30.1 - Bölgeler ve yerşekilleri</h2></a>
-                                <a href=""><li class="cat_links">30.1.1 - Ormanlar ve korular</li></a>
-                                <a href=""><li class="cat_links">30.1.2 - Su kütleleri ve sahiller</li></a>
-                                <a href=""><li class="cat_links">30.1.3 - Topoğrafya</li></a>
-                                <a href=""><li class="cat_links">30.1.4 - Karaderinlik</li></a>
+                                <a href="{{site.baseurl}}/category/cografya/yersekilleri"><h2 id="cat_header">30.1 - Bölgeler ve yerşekilleri</h2></a>
+                                <a href="{{site.baseurl}}/category/cografya/yersekilleri/ormanlar"><li class="cat_links">30.1.1 - Ormanlar ve korular</li></a>
+                                <a href="{{site.baseurl}}/category/cografya/yersekilleri/su-kutleleri"><li class="cat_links">30.1.2 - Su kütleleri ve sahiller</li></a>
+                                <a href="{{site.baseurl}}/cografya/karaderinlik"><li class="cat_links">30.1.3 - Karaderinlik</li></a>
                             </ul>
                             <ul>
-                                <a href=""><h2 id="cat_header">30.2 - Yerleşim yerleri</h2></a>
-                                <a href=""><li class="cat_links">30.2.1 - Metropolisler</li></a>
-                                <a href=""><li class="cat_links">30.2.2 - Polisler ve kentler</li></a>
-                                <a href=""><li class="cat_links">30.2.3 - Kasabalar ve köyler</li></a>
+                                <a href="{{site.baseurl}}/category/cografya/yerlesim-yerleri"><h2 id="cat_header">30.2 - Yerleşim yerleri</h2></a>
+                                <a href="{{site.baseurl}}/category/cografya/yerlesim-yerleri/metropolisler"><li class="cat_links">30.2.1 - Metropolisler</li></a>
+                                <a href="{{site.baseurl}}/category/cografya/yerlesim-yerleri/kentler"><li class="cat_links">30.2.2 - Polisler ve kentler</li></a>
+                                <a href="{{site.baseurl}}/category/cografya/yerlesim-yerleri/kasabalar"><li class="cat_links">30.2.3 - Kasabalar ve köyler</li></a>
                             </ul>
                             <ul>
-                                <a href=""><li class="cat_links">30.4 - Yapılar</li></a>
+                                <a href="{{site.baseurl}}/category/cografya/yapilar"><li class="cat_links">30.4 - Yapılar</li></a>
                             </ul>
                     </ul>
                     <ul>
-                        <a href=""><h2 id="cat_header">40 - Kozmoloji</h2></a>
+                        <a href="{{site.baseurl}}/category/kozmoloji"><h2 id="cat_header">40 - Kozmoloji</h2></a>
                         
-                        <a href=""><li class="cat_links">40.1 - Carcosa</li></a>
-                        <a href=""><li class="cat_links">40.2 - Elysium</li></a>
-                        <a href=""><li class="cat_links">40.3 - Orcus</li></a>
-                        <a href=""><li class="cat_links">40.4 - Hiçlik</li></a>
+                        <a href="{{site.baseurl}}/kozmoloji/carcosa"><li class="cat_links">40.1 - Carcosa</li></a>
+                        <a href="{{site.baseurl}}/kozmoloji/elysium"><li class="cat_links">40.2 - Elysium</li></a>
+                        <a href="{{site.baseurl}}/kozmoloji/orcus"><li class="cat_links">40.3 - Orcus</li></a>
+                        <a href="{{site.baseurl}}/kozmoloji/hiclik"><li class="cat_links">40.4 - Hiçlik</li></a>
                         <ul>
-                            <a href=""><h2 id="cat_header">40.5 - Materyal evren</h2></a>
-                            <a href=""><li class="cat_links">40.5.1 - Dünya</li></a>
-                            <a href=""><li class="cat_links">40.5.2 - Gölgediyarı</li></a>
+                            <a href="{{site.baseurl}}/kozmoloji/materyal-evren"><h2 id="cat_header">40.5 - Materyal evren</h2></a>
+                            <a href="{{site.baseurl}}/kozmoloji/orbis"><li class="cat_links">40.5.1 - Dünya</li></a>
+                            <a href="{{site.baseurl}}/kozmoloji/golgediyari"><li class="cat_links">40.5.2 - Gölgediyarı</li></a>
                         </ul>
                         <ul>
-                            <a href=""><h2 id="cat_header">40.6 - Kavramlar</h2></a>
-                            <a href=""><li class="cat_links">40.6.1 - Evren hakkında</li></a>
-                            <a href=""><li class="cat_links">40.6.2 - Büyü</li></a>
-                            <a href=""><li class="cat_links">40.6.3 - Düzlemler</li></a>
+                            <a href="{{site.baseurl}}/category/kozmoloji/kavramlar"><h2 id="cat_header">40.6 - Kavramlar</h2></a>
+                            <a href="{{site.baseurl}}/kozmoloji/buyu"><li class="cat_links">40.6.1 - Büyü</li></a>
+                            <a href="{{site.baseurl}}/category/kozmoloji/duzlemler"><li class="cat_links">40.6.2 - Düzlemler</li></a>
                         </ul>
                     </ul>
                     <ul>
-                        <a href=""><h2 id="cat_header">50 - Canlılar</h2></a>
-                        <a href=""><li class="cat_links">50.1 - Bitkiler ve mantarlar</li></a>
-                        <a href=""><li class="cat_links">50.2 - Hayvanlar</li></a>
-                        <a href=""><li class="cat_links">50.3 - Aberasyonlar</li></a>
-                        <a href=""><li class="cat_links">50.4 - Irşiler</li></a>
-                        <a href=""><li class="cat_links">50.5 - Canavarlar</li></a>
-                        <a href=""><li class="cat_links">50.6 - Humanoidler</li></a>
-                        <a href=""><li class="cat_links">50.7 - Goblinoidler</li></a>
-                        <a href=""><li class="cat_links">50.8 - Örbekler</li></a>
-                        <a href=""><li class="cat_links">50.9 - Şeytanlar</li></a>
-                        <a href=""><li class="cat_links">50.10 - Ejderhalar</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar"><h2 id="cat_header">50 - Canlılar</h2></a>
+                        <a href="{{site.baseurl}}/category/canlilar/bitkiler"><li class="cat_links">50.1 - Bitkiler ve mantarlar</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/hayvanlar"><li class="cat_links">50.2 - Hayvanlar</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/aberasyonlar"><li class="cat_links">50.3 - Aberasyonlar</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/irsiler"><li class="cat_links">50.4 - Irşiler</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/canavarlar"><li class="cat_links">50.5 - Canavarlar</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/hayvanlar/humanoidler"><li class="cat_links">50.6 - Humanoidler</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/hayvanlar/goblinoidler"><li class="cat_links">50.7 - Goblinoidler</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/orekler"><li class="cat_links">50.8 - Örekler</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/seytanlar"><li class="cat_links">50.9 - Şeytanlar</li></a>
+                        <a href="{{site.baseurl}}/category/canlilar/ejderhalar"><li class="cat_links">50.10 - Ejderhalar</li></a>
                     </ul>
                     <ul>
-                        <a href=""><h2 id="cat_header">60 - Nesneler</h2></a>
-                        <a href=""><li class="cat_links">60.1 - Önemli nesneler</li></a>
-                        <a href=""><li class="cat_links">60.2 - Materyaller</li></a>
+                        <a href="{{site.baseurl}}/category/nesneler"><h2 id="cat_header">60 - Nesneler</h2></a>
+                        <a href="{{site.baseurl}}/category/nesneler/materyaller"><li class="cat_links">60.2 - Materyaller</li></a>
                     </ul>
                     <ul>
-                        <a href=""><h2 id="cat_header">70 - Tarih</h2></a>
-                        <a href=""><li class="cat_links">60.1 - Genel tarih</li></a>
-                        <a href=""><li class="cat_links">60.2 - Önemli olaylar</li></a>
-                        <a href=""><li class="cat_links">60.3 - Önemli günler ve kutlamalar</li></a>
+                        <a href="{{site.baseurl}}/category/tarih"><h2 id="cat_header">70 - Tarih</h2></a>
+                        <a href="{{site.baseurl}}/category/tarih/olaylar"><li class="cat_links">60.1 - Önemli olaylar</li></a>
+                        <a href="{{site.baseurl}}/category/kutlamalar"><li class="cat_links">60.2 - Önemli günler ve kutlamalar</li></a>
                     </ul>
                     <ul>
-                        <a href=""><li class="cat_links">80 - Önemli kişiler</li></a>
-                    </ul>
-
-                    <ul>
-                        <a href=""><h2 id="cat_header">90 - Tüm yazılar</h2></a>
-                            {% for post in site.posts limit:10 %}
-                                <a href="{{ site.baseurl }}{{ post.url }}"><li class="cat_links">{{ post.title }}</li></a>
-                            {% endfor %}
+                        <a href="{{site.baseurl}}/category/kisiler"><h2 class="cat_links">80 - Önemli kişiler</h2></a>
                     </ul>
 
             </ul>
