--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,29 @@
 layout: default
 ---
 
+
+
+<div class="blogposts_wrapper" id="home">
+    <div class="blogpost_inner_container" id="home">
+        <div class="blogpost_container" id="home">
+            <a href="{{site.baseurl}}/hosgeldiniz">
+                <div class="article_card" id="home">
+                    <div class="card_info" id="home">
+                        <div class="info__title" id="home">Orbis diyarına hoşgeldiniz</div>
+                        <div class="info__desc" id="home">İmkansızın gerçeğe dönüştüğü ve bilinmeyenin gözlerinizin önünde ortaya çıktığı bir maceraya atılın.</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
 {{ content }}
 
 <!-- Blog posts are here -->
